--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigációk</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="hu" style="height: 100%">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./src/assets/VendoIconBlack.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VendoShop</title>
+</head>
+
+<body style="display: flex; flex-direction: column; min-height: 100%;">
+  <div id="root" style="display: flex; flex-direction: column; flex-grow: 1; width: 100%; height: 100%;"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
